--- a/2021/02_MvcAndWebForms/WebAppMVC/Views/Home/Index.cshtml
+++ b/2021/02_MvcAndWebForms/WebAppMVC/Views/Home/Index.cshtml
@@ -1,19 +1,20 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-<div class="text-center">
-    <h2>Домашняя библиотека</h2>
+<TextBlock class="text-center">
+    <h3>Домашняя библиотека</h3>
     <table id="tbBooks" class="table">
         <thead>
-            <tr><th>Ид</th><th>Автор</th><th>Название</th><th>Содержание</th><th>Год издания</th><th>Количество томов</th></tr>
+            <tr><th></th><th>Ид</th><th>Автор</th><th>Название</th><th>Содержание</th><th>Год издания</th><th>Кол-во томов</th></tr>
         </thead>
         <tbody>
             @foreach (Book book in Model)
             {
-                <tr><td>@book.Id</td><td>@book.Author</td><td>@book.Name</td><td>@book.Content</td><td>@book.Year</td><td>@book.NumberOfVolumes</td></tr>
+                <tr><td><input id="@book.Id" type="checkbox" /></td><td>@book.Id</td><td>@book.Author</td><td>@book.Name</td><td>@book.Content</td><td>@book.Year</td><td>@book.NumberOfVolumes</td></tr>
             }
         </tbody>
     </table>
-    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AddBook">Добавить книгу</a>
-    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="DeleteBook">Удалить книгу</a>
-</div>
+    <div class="form-inline">
+        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AddBook">Добавить книгу</a>
+        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="DeleteBook">Удалить книгу</a>
+    </div>
